--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "johnny-five": "^0.8.92",
+    "lodash": "^3.10.1",
     "request": "^2.64.0",
     "usb-detection": "^1.2.0"
   },
